--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>ConvertHub</title>
-</head>
 <body>
   <h1>ConvertHub</h1>
-  <p>Your all-in-one conversion hub</p>
-<script src="script.js"></script></body>
-</html>
+
+  <h2>Text → Audio</h2>
+  <textarea id="text-input" rows="4" cols="50" placeholder="Type something here..."></textarea><br>
+  <button onclick="convertTextToAudio()">Convert to Audio</button><br>
+  <a id="audio-download" href="#" download="output.mp3" style="display:none">Download Audio</a>
+
+  <script src="script.js"></script>
+</body>
